Colors and font correction, algo some alignment

--- a/main.css
+++ b/main.css
@@ -1,8 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
+
 body {
 
     width: 414px;
-
     background-color: #E5E5E5;
+
+    font-family: 'Roboto';
 
 }
 
@@ -37,13 +43,13 @@ body {
 
     display: flex;
     
-    background-color: green;
+    /*background-color: green;*/
 
 }
 
 .top_title span {
 
-    /*font-family: Righteous*/
+    font-family: 'Righteous';
 
     font-size: 44px;
     
@@ -63,7 +69,7 @@ body {
     font-size: 18px;
 
     color: #FFFFFF;
-    background-color: blue;
+    /*background-color: blue;*/
 
 }
 
@@ -85,10 +91,28 @@ body {
 
     display: flex;
     flex-direction: column;
+    /*align-items: flex-start;*/
+    justify-content: flex-start;
 
     border: 5px solid cyan;
 
-    margin: 0 0 40px 0;
+    /*margin: 0 0 40px 0;*/
+
+}
+
+.menu_class {
+
+    border: 5px solid black;
+
+    margin: 26px 0 0 0;
+
+}
+
+.menu_text {
+
+    font-family: 'Righteous';
+    font-size: 26px;
+    color: #333333;
 
 }
 
@@ -99,7 +123,7 @@ body {
 
     overflow: hidden;
 
-    border: 5px solid black;
+    /*border: 5px solid black;*/
 
 }
 
@@ -115,16 +139,18 @@ body {
     /*height: 216px;*/
     width: 172px;
 
-    border: 5px solid orange;
+    /*border: 5px solid orange;*/
     border-radius: 9px;
 
     margin: 0 16px 0 0;
+
+    background-color: #FFFFFF;
 
     /*position: relative;*/
 }
 
 .menu_thumbnail {
-    border: 5px solid red;
+    /*border: 5px solid red;*/
 
     display: flex;
     justify-content: center;
@@ -148,7 +174,7 @@ body {
 
 .menu_card_desc{
 
-    /*margin: 113px 0px 8px 0px;*/
+    margin: 0 11px 0 14px;
 
     display: flex;
     flex-direction: column;
@@ -157,7 +183,7 @@ body {
 
     height: 100%;
 
-    border: 5px solid blueviolet;
+    /*border: 5px solid blueviolet;*/
 
 }
 
@@ -167,6 +193,10 @@ body {
     height: 23px;
     margin: 0 0 4px 0;
 
+    font-size: 16px;
+    font-weight: 700;
+    color: #333333;
+
 
 }
 
@@ -174,13 +204,17 @@ body {
 
     width: 147px;
     height: 18px;
-
+    font-size: 15px;
+    font-weight: 300;
+    color: #A6A6A6;
 
 }
 
 .card_value {
 
-
+    font-size: 16px;
+    font-weight: 400;
+    color: #000000;
     margin: 9px 0 0 0;
 
 }
@@ -207,6 +241,21 @@ body {
 
     display: none;
 
+    /* USE BELLOW VALUES FOR CONDITIONAL */
+    /*height: 61px;
+    width: 364px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    border-radius: 50px;
+    background-color: #32B72F;
+
+    font-size: 20px;
+    color: #FFFFFF;*/
+
 }
 
 .open_checkout {
@@ -223,5 +272,6 @@ body {
     background-color: #CBCBCB;
 
     font-size: 20px;
+    color: #FFFFFF;
 
 }
